--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,12 @@
         "typeinfo": "cpp",
         "unordered_map": "cpp",
         "variant": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "numeric": "cpp",
+        "random": "cpp",
+        "thread": "cpp",
+        "future": "cpp",
+        "iterator": "cpp",
+        "utility": "cpp"
     }
 }
