add cmake for concurrent programming

--- a/cppBasic/ConcurrentProgramming/Makefile
+++ b/cppBasic/ConcurrentProgramming/Makefile
@@ -1,11 +1,29 @@
-CXX = g++
+VSIZE := 100
 
-SOURCE_CXX = calcSum.cpp
+.PHONY: build configure run test clean
 
-TARGET = calcSumTest
-LDFLAGS_COMMON = -std=c++14 -stdlib=libc++ -lgtest
+build: configure
+	cmake --build build
 
-all:
-	$(CXX) $(SOURCE_CXX) $(LDFLAGS_COMMON) -Wall -Wextra -o $(TARGET)
+configure:
+	cmake -B build -DVSIZE=${VSIZE}
+
+run:
+	./build/answer_app
+
+test:
+	ctest --test-dir build -R "^calcsum."
+
 clean:
-	rm -rf *.o $(TARGET)
+	rm -rf build
+
+
+# CXX = g++
+# SOURCE_CXX = calcSum.cpp
+# TARGET = calcSumTest
+# LDFLAGS_COMMON = -std=c++14 -stdlib=libc++ -lgtest
+
+# all:
+# 	$(CXX) $(SOURCE_CXX) $(LDFLAGS_COMMON) -Wall -Wextra -o $(TARGET)
+# clean:
+# 	rm -rf *.o $(TARGET)
